<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/bgColour"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:padding="10dp"
        android:background="@color/textBlue"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/buttonDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonBgColour"
        android:textColor="@color/lightGrey"
        android:text="@string/select_date"
        android:textStyle="bold"
        android:textSize="18sp"
    />

    <TextView
        android:id="@+id/textViewSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sample_dob"
        android:textColor="@color/textBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textViewAgeInMinutesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/minutes_from_date"
        android:textColor="@color/lightGrey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/textViewAgeInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sample_minutes"
        android:textColor="@color/textBlue"
        android:textSize="35sp"
        android:textStyle="bold"
        />


</LinearLayout>